firefox related style bugs

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -107,11 +107,10 @@
 	}
 
 	@media(max-width: 600px) {
-		width: -webkit-fill-available !important;
-		width: -moz-fill-available !important;
+		min-width: 100%;
 		border-bottom: 1px solid rgba(229, 246, 255, 0.27);
 		padding-bottom: 20px !important;
-	  margin: 0 0 20px;
+	  	margin: 0 0 20px;
 	}
 
 	.logo {
