--- a/src/less/global/pagination.less
+++ b/src/less/global/pagination.less
@@ -5,13 +5,13 @@
 	pagination
 ====================================================*/
 .pagination {
-	margin: 10px 0 0;
+	margin: 10px auto 0;
 	text-align: center;
 	display: block;
 	order: 20;
 	position: relative;
 	background: none;
-	width:-webkit-fill-available;
+	width: 100%;
 
 	.older-posts {
 		position: absolute;
