--- a/src/less/series/series.less
+++ b/src/less/series/series.less
@@ -94,10 +94,12 @@
 
       .desc {
         display: none;
+        margin-right: 7px;
       }
 
       .asc {
         display: inline;
+        margin-right: 7px;
       }
 
       .sort-title {
@@ -151,12 +153,11 @@
     }
 
     .details {
-      width: -webkit-fill-available;
+      width: 100%;
       padding: 10px 20px 0;
       position: relative;
       max-height: 115px;
       @media(max-width: 800px) {
-        max-width: -webkit-fill-available;
         padding: 0 0 0 15px;
       }
 
