kanban finally on graphql

--- a/src/less/projects/kanban.less
+++ b/src/less/projects/kanban.less
@@ -184,7 +184,7 @@
     }
 
     .column {
-      background: #fff;
+      background: #fdfdfd;
       border: 1px solid #f9f9f9;
       position: relative;
       margin-bottom: 7px;
@@ -318,7 +318,7 @@
         }
 
         .card {
-          background-color: #fdfdfd;
+          background-color: #fff;
           padding: 10px 15px;
           position: relative;
           border: 1px solid #f1f1f1;
@@ -407,9 +407,8 @@
 
               .avatar,
               .priority {
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
+                width: 20px !important;
+                height: 20px !important;
                 overflow: hidden;
                 margin: 0;
                 text-align: center;
@@ -455,14 +454,14 @@
               text-align: center;
               display: flex;
               align-items: center;
-              padding: 0 5px;
+              padding: 6px 7px;
 
               i {
                 opacity: .7;
               }
 
               span {
-                color: #42526E;
+                color: #242d3e;
                 font-size: 11px;
                 font-family: 'TTNormsPro-Regular';
                 margin-right: 0;
