--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -8,9 +8,9 @@
   {{#if feature_image}}
     <a href="{{url}}" class="featured-media">
       <picture>
-        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="extralarge"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-        <source media="(min-width: 800px)" data-srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
-        <source media="(min-width: 600px)" data-srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="extralarge"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+        <source media="(min-width: 800px)" srcset="{{img_url feature_image size="large"}} 1x, {{img_url feature_image size="large_retina"}} 2x">
+        <source media="(min-width: 600px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
         <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
     </picture>
     </a>
