--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -4,7 +4,7 @@
     {{#if feature_image}}
     <a class="imagewrapper" href="{{url}}">
       <picture>
-        <source media="(min-width: 1200px)" data-srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
+        <source media="(min-width: 1200px)" srcset="{{img_url feature_image size="medium"}} 1x, {{img_url feature_image size="medium_retina"}} 2x">
         <img alt="{{title}}" class="lazy" src="{{img_url feature_image}}">
     </picture>
       </a>
